thread in deep